restricted width of button div on banner to prevent horizontal overflow

--- a/application/frontend/src/assets/css/home.css
+++ b/application/frontend/src/assets/css/home.css
@@ -35,7 +35,7 @@
 .banner1-caption {
   position: absolute;
   top: 55%;
-  transform: translateX(45%);
+  transform: translateX(183%);
   color: var(--primary-color);
 }
 
@@ -61,6 +61,12 @@
   box-shadow: 0 8px 16px 0 rgba(172, 172, 172, 0.2),
     0 6px 20px 0 var(--secondary-color);
   border: 2px solid var(--secondary-color);
+}
+
+@media (max-width: 991px) {
+  .driver-card {
+    margin-top: 20px;
+  }
 }
 
 /* All Restaurants */
